--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -91,6 +91,27 @@ nav .star_list_div .star_list .star_name:hover {
 .content .star_name.play {
   color: #C4C5CC;
 }
+.content input[type=checkbox] {
+  -webkit-appearance: none;
+  width: 8px;
+  height: 8PX;
+  float: right;
+  margin-top: 28px;
+  border: 1px solid rgba(222,50,83,0.5);
+  border-radius: 100%;
+  background: none;
+  transition: all 0.2s ease;
+  outline: none;
+  cursor: pointer;
+}
+.content input[type=checkbox]:hover {
+  width:12px;
+  height:12px;
+  margin-top: 24px;
+}
+.content input[type=checkbox]:checked {
+  background: rgba(222,50,83,1);
+}
 .content .window {
   width: calc(100% - 3rem);
   height: 56vw;
@@ -107,6 +128,8 @@ nav .star_list_div .star_list .star_name:hover {
   background: -o-linear-gradient(top, rgba(222,50,83,1) 0%, rgba(215,47,78,1) 100%);
   background: linear-gradient(to bottom, rgba(222,50,83,1) 0%, rgba(215,47,78,1) 100%);
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
 }
 .content .window:hover {
   border: 3px solid #fff;
@@ -117,13 +140,27 @@ nav .star_list_div .star_list .star_name:hover {
   box-shadow : #9D9D9D 0 15px 45px 5px;
   /*-webkit-animation: window_bounce  1.5s infinite;*/
 }
+#video {
+  width:100%;
+  height:100%;
+  opacity: 0;
+  transition: all 1s ease;
+}
+#video.on {
+  opacity: 1;
+}
 .content .equalizer {
-  position: relative;
+  position: absolute;
   margin: 0 auto;
   top: 50%;
-  transform: translateY(-50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 26px;
   height: 30px;
+    transition: all 1s ease;
+}
+.content .equalizer.video_on {
+  opacity:0;
 }
 .content .equalizer .equalizer_bar {
   width: 3px;
