Update for various playList

--- a/css/animation.css
+++ b/css/animation.css
@@ -1,13 +1,13 @@
-.view_list #view_list_bar1.play {
-    -webkit-animation: view_list_bar1  1s infinite;
+.threeBarIcon #threeBarIcon_bar1.play {
+    -webkit-animation: threeBarIcon_bar1  1s infinite;
 }
-.view_list #view_list_bar2.play {
-  -webkit-animation: view_list_bar2  1s infinite;
+.threeBarIcon #threeBarIcon_bar2.play {
+  -webkit-animation: threeBarIcon_bar2  1s infinite;
 }
-.view_list #view_list_bar3.play {
-  -webkit-animation: view_list_bar3  1s infinite;
+.threeBarIcon #threeBarIcon_bar3.play {
+  -webkit-animation: threeBarIcon_bar3  1s infinite;
 }
-@-webkit-keyframes view_list_bar1 {
+@-webkit-keyframes threeBarIcon_bar1 {
   0%   { width: 24px; }
   20%  { width: 20px; }
   40%  { width: 16px; }
@@ -15,7 +15,7 @@
   80%  { width: 18px; }
   100% { width: 22px; }
 }
-@-webkit-keyframes view_list_bar2 {
+@-webkit-keyframes threeBarIcon_bar2 {
     0%   { width: 20px; }
     20%  { width: 24px; }
     40%  { width: 16px; }
@@ -23,7 +23,7 @@
     80%  { width: 16px; }
     100% { width: 24px; }
 }
-@-webkit-keyframes view_list_bar3 {
+@-webkit-keyframes threeBarIcon_bar3 {
     0%   { width: 14px; }
     20%  { width: 16px; }
     40%  { width: 12px; }
