--- a/css/master.scss
+++ b/css/master.scss
@@ -1,27 +1,272 @@
+$videoItem__big__width: 384px;
+$videoItem__big__height: 240px;
+$videoItem__big__fontSize: 36px;
+
+$videoItem__regular__width: 282px;
+$videoItem__regular__height: 176px;
+$videoItem__regular__fontSize: 24px;
+
+$videoItem__show__width: 486px;
+$videoItem__show__height: 304px;
+
 body {
   margin: 0;
-  height: 100vh;
   background: rgba(244,248,248,1);
-  background: -moz-linear-gradient(top, rgba(244,248,248,1) 0%, rgba(231,232,231,1) 100%);
-  background: -webkit-linear-gradient(top, rgba(244,248,248,1) 0%, rgba(231,232,231,1) 100%);
-  background: -o-linear-gradient(top, rgba(244,248,248,1) 0%, rgba(231,232,231,1) 100%);
-  background: linear-gradient(to bottom, rgba(244,248,248,1) 0%, rgba(231,232,231,1) 100%);
+  // background: -moz-linear-gradient(top, rgba(244,248,248,1) 0%, rgba(231,232,231,1) 100%);
+  // background: -webkit-linear-gradient(top, rgba(244,248,248,1) 0%, rgba(231,232,231,1) 100%);
+  // background: -o-linear-gradient(top, rgba(244,248,248,1) 0%, rgba(231,232,231,1) 100%);
+  // background: linear-gradient(to bottom, rgba(244,248,248,1) 0%, rgba(231,232,231,1) 100%);
+  font-family: "Helvetica Neue";
 }
+a {
+  cursor: pointer;
+}
+ul {
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+.videoItem {
+  display: inline-block;
+  transform: none;
+  transition:
+    background ease 0.5s, 
+    transform ease 0.2s,
+    width ease 0.2s 0.3s,
+    height ease 0.2s 0.3s,
+    margin-top ease 0.2s 0.4s,
+    margin-left ease 0.2s 0.4s;
+  & + & {
+    margin-left: 16px;
+  }
+  &:last-child {
+    margin-right: 48px;
+  }
+  &.fullShow {
+    position: absolute;
+    z-index: 100;
+    background: rgba(244,248,248,1);
+    height: 100vh;
+    cursor: zoom-out;
+    .videoFullShowWrapper {      
+      margin-top: 50vh;
+      margin-left: 50vw;
+      transform: translate(-50%, -50%);
+      .videoStarName {
+        margin-left: 0;
+        width: $videoItem__show__width;
+        font-size: $videoItem__big__fontSize;
+      }
+      .videoWindow {
+        width: $videoItem__show__width;
+        height: $videoItem__show__height;
+        
+        &:hover {
+          width: calc(#{$videoItem__show__width} - 4px);
+          height: calc(#{$videoItem__show__height} - 4px);
+        }
+      }
+      .control_bar {
+        width: calc(#{$videoItem__show__width} - 96px);
+      }
+    }
+  }
+
+  // by color
+  &.red {
+    .videoWindow {
+      background: rgba(255,255,255,1);
+      background: -moz-linear-gradient(top, rgba(222,50,83,1) 0%, rgba(215,47,78,1) 100%);
+      background: -webkit-linear-gradient(top, rgba(222,50,83,1) 0%, rgba(215,47,78,1) 100%);
+      background: -o-linear-gradient(top, rgba(222,50,83,1) 0%, rgba(215,47,78,1) 100%);
+      background: linear-gradient(to bottom, rgba(222,50,83,1) 0%, rgba(215,47,78,1) 100%);
+    }
+  }
+  &.mustard {
+    .videoWindow {
+      background: rgba(216,156,48,1);
+    }
+  }
+  &.blue {
+    .videoWindow {
+      background: rgba(78,108,219,1);
+    }
+  }
+  &.jade {
+    .videoWindow {
+      background: rgba(81,189,193,1);
+    }
+  }
+  // by size
+  &.big {
+    .videoStarName {
+      font-size: $videoItem__big__fontSize;
+      margin-bottom: 16px;
+      width: $videoItem__big__width;
+    }
+    .videoWindow {
+      width: $videoItem__big__width;
+      height: $videoItem__big__height;
+      border-radius: 12px;
+      &:hover {
+        width: calc(#{$videoItem__big__width} - 4px);
+        height: calc(#{$videoItem__big__height} - 4px);
+      }
+    }
+  }
+  &.regular {
+    .videoStarName {
+      font-size: $videoItem__regular__fontSize;
+      margin-bottom: 12px;
+      width: $videoItem__regular__width;
+    }
+    .videoWindow {
+      width: $videoItem__regular__width;
+      height: $videoItem__regular__height;
+      border-radius: 8px;
+      &:hover {
+        width: calc(#{$videoItem__regular__width} - 4px);
+        height: calc(#{$videoItem__regular__height} - 4px);
+      }
+    }
+  }
+
+  .videoStarName {
+    position: relative;
+    color: #939499;
+    color: #C4C5CC;
+    font-family: "Helvetica Neue";
+    font-weight: bold;
+    transition: all 0.2s ease;
+    cursor: default;
+    
+    &.playing {
+      color: #939499;
+    }
+
+    .displaySwitch {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      -webkit-appearance: none;
+      width: 8px;
+      height: 8PX;
+      border: 1px solid rgba(222,50,83,0.5);
+      border-radius: 100%;
+      background: none;
+      transition: all 0.2s ease;
+      outline: none;
+      cursor: pointer;
+  
+      &:hover {
+        width:12px;
+        height:12px;
+        // margin-top: 24px;
+      }
+      &:checked {
+        background: rgba(222,50,83,1);
+      }
+    }
+  }
+  .videoWindow {
+    transition: box-shadow 1s ease,
+                filter 0.4s ease,
+                all 0.4s ease;
+    box-shadow: #aeb8bd 0 10px 30px;
+    box-shadow : #9D9D9D 0 15px 55px 4px;
+    border: 1px solid rgba(255,255,255,0);
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+
+    &:hover {
+      border: 3px solid #fff;
+    }
+
+    &.playing {
+      box-shadow : #9D9D9D 0 15px 45px 5px;
+      /*-webkit-animation: window_bounce  1.5s infinite;*/
+    }
+    &.displayOn {
+      .videoYoutubePlayer {
+        opacity: 1;
+      }
+
+      .videoPlayEqualizer {
+        opacity:0;
+      }
+    }
+
+    .videoYoutubePlayer {
+      width:100%;
+      height:100%;
+      opacity: 0;
+      transition: opacity 0.2s ease;
+    }
+
+    .videoPlayEqualizer {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 30px;
+      height: 30px;
+      transition: all 1s ease;
+
+      &.is_playing {
+        #equalizer_bar1  {-webkit-animation: equalizer_bar1  1s infinite;}
+        #equalizer_bar2  {-webkit-animation: equalizer_bar2  1s infinite;}
+        #equalizer_bar3  {-webkit-animation: equalizer_bar3  1s infinite;}
+        #equalizer_bar4  {-webkit-animation: equalizer_bar4  1s infinite;}
+      }
+      .equalizer_bar {
+        width: 3px;
+        height: 5px;
+        background-color: #fff;
+        border-radius: 6px;
+        display: inline-block;
+        vertical-align: middle;
+        transition: all 1s ease;
+  
+        &#equalizer_bar1  {height: 8px}
+        &#equalizer_bar2  {height: 15px}
+        &#equalizer_bar3  {height: 18px}
+        &#equalizer_bar4  {height: 9px}
+      }
+    }
+  }
+  .control_bar {
+    margin: 0 auto;
+  }
+  .videoProgressBar {
+    opacity: 0;
+
+    &.play {
+      opacity: 1;
+    }
+  }
+}
+
+
+
 nav.starListNav {
   margin: 0;
   position: fixed;
+  top: 0;
   z-index: 10;
   width: 100%;
 
+  & > a {
+    font-size: 0;
+  }
   .starListNavLabel {
     width: 8rem;
 
-    &.hover {
-      background-color: #C4C5CC;
-    }
-
+    
     .threeBarIcon {
-      margin: 1rem 0.5rem 1rem 1rem;
+      padding: 1rem 0.5rem 1rem 1rem;
       display: inline-block;
 
       .threeBarIcon_bar {
@@ -37,7 +282,6 @@ nav.starListNav {
     }
     .fanicLogo {
       color: #C4C5CC;
-      font-family: "Helvetica Neue";
       font-size: 1.5rem;
       font-weight: bold;
       display: inline-block;
@@ -78,126 +322,17 @@ nav.starListNav {
 }
 .content {
   margin: 0 auto;
-  position: relative;
-  top: calc(50%);
-  transform: translateY(-50%);
-  width: auto;
-
-  .starName {
-    color: #939499;
-    font-family: "Helvetica Neue";
-    font-size: 2.25rem;
-    font-weight: bold;
-    margin: 0 auto;
-    margin-bottom: 20px;
-    width: 25rem;
-    transition: all 1s ease;
-    cursor: default;
-
-    &.play {
-      color: #C4C5CC;
-    }
-  }
-  
-  input[type=checkbox] {
-    -webkit-appearance: none;
-    width: 8px;
-    height: 8PX;
-    float: right;
-    margin-top: 28px;
-    border: 1px solid rgba(222,50,83,0.5);
-    border-radius: 100%;
-    background: none;
-    transition: all 0.2s ease;
-    outline: none;
-    cursor: pointer;
-
-    &:hover {
-      width:12px;
-      height:12px;
-      margin-top: 24px;
-    }
-    &:checked {
-      background: rgba(222,50,83,1);
-    }
-  }
-  .video {
-      
-  }
-  .window {
-    width: 25rem;
-    height: 15.625rem;
-    border-radius: 0.75rem;
-    margin: 0 auto;
-    transition: box-shadow 1s ease,
-                filter 0.4s ease,
-                all 0.4s ease;
-    box-shadow: #aeb8bd 0 10px 30px;
-    border: 1px solid rgba(255,255,255,0);
-    background: rgba(255,255,255,1);
-    background: -moz-linear-gradient(top, rgba(222,50,83,1) 0%, rgba(215,47,78,1) 100%);
-    background: -webkit-linear-gradient(top, rgba(222,50,83,1) 0%, rgba(215,47,78,1) 100%);
-    background: -o-linear-gradient(top, rgba(222,50,83,1) 0%, rgba(215,47,78,1) 100%);
-    background: linear-gradient(to bottom, rgba(222,50,83,1) 0%, rgba(215,47,78,1) 100%);
-    cursor: pointer;
-    position: relative;
-    overflow: hidden;
-
-    &:hover {
-      border: 3px solid #fff;
-      width: calc(25rem - 6px);
-      height: calc(15.625rem - 6px);
-    }
-
-    &.playing {
-      box-shadow : #9D9D9D 0 15px 45px 5px;
-      /*-webkit-animation: window_bounce  1.5s infinite;*/
-    }
-  }
-  #video {
-    width:100%;
-    height:100%;
-    opacity: 0;
-    transition: all 1s ease;
-  }
-  #video.on {
-    opacity: 1;
-  }
-  .equalizer {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 30px;
-    height: 30px;
-    transition: all 1s ease;
-
-    &.video_on {
-      opacity:0;
-    }
-    .equalizer_bar {
-      width: 3px;
-      height: 5px;
-      background-color: #fff;
-      border-radius: 6px;
-      display: inline-block;
-      vertical-align: middle;
-      transition: all 1s ease;
-    }
-  }
-  .control_bar {
-    margin: 0 auto;
-    width: 18.75rem;
-  }
-  #progress_bar {
-    opacity: 0;
-
-    &.play {
-      opacity: 1;
+  .videoListDiv {
+    margin-left: calc((100vw - 1200px) / 2);
+    width: fit-content;
+    margin-top: 50vh;
+    transform: translateY(-50%);
+    .videoList {
+      white-space: nowrap;
     }
   }
   .videoListDescription {
-      width: 25rem;
+      width: $videoItem__big__width;
       margin: 0 auto;
       margin-top: 2em;
       font-size: 1.25em;
